--- a/payapa.android/app/src/main/res/values/strings.xml
+++ b/payapa.android/app/src/main/res/values/strings.xml
@@ -117,4 +117,27 @@
         <item>Fourth Year</item>
     </string-array>
 
+    <string-array name="role_array">
+        <item>Select User Role</item>
+        <item>Student</item>
+        <item>Personnel</item>
+        <item>Faculty</item>
+    </string-array>
+
+    <string-array name="department_array">
+        <item>Select Department</item>
+        <item>CITE</item>
+        <item>CCJE</item>
+        <item>CHUMS</item>
+        <item>CTE</item>
+        <item>CHTM</item>
+        <item>CAS</item>
+        <item>CEA</item>
+        <item>CO</item>
+
+    </string-array>
+
+
+
+
 </resources>
